fix(table-of-contents): fix wc horizontal title alignment

--- a/packages/styles/scss/components/tableofcontents/_tableofcontents.scss
+++ b/packages/styles/scss/components/tableofcontents/_tableofcontents.scss
@@ -239,13 +239,7 @@ $hover-transition-timing: 95ms;
   .#{$prefix}--tableofcontents-horizontal__contents {
     [name] {
       display: block;
-      color: $text-01;
-      transform: translateY(calc(-1 * #{$layout-03}));
-      padding-top: 1rem;
-
-      > * {
-        transform: translateY($layout-03);
-      }
+      padding-top: 3rem;
     }
   }
 
